Remove extra vertical new lines

--- a/Example/schemas/applicant/profile-resume/profile_phone_verification_banner_click.yaml
+++ b/Example/schemas/applicant/profile-resume/profile_phone_verification_banner_click.yaml
@@ -5,7 +5,7 @@ category: Профиль-резюме
 application: applicant
 
 experiment:
-  url: https://some.jira.link.ru/browse/PORTFOLIO-12870
+  url: https://jira.hh.ru/browse/PORTFOLIO-12870
   name: PORTFOLIO-12870
   description: Отклик одним резюме
 
