Add support optional types

--- a/Example/schemas/applicant/rate-app/support_chat_click.yaml
+++ b/Example/schemas/applicant/rate-app/support_chat_click.yaml
@@ -20,4 +20,7 @@ internal:
       hhtmSource: Applicant.employerScreen
   hhtmFrom:
     description: После открытия какого экрана была нажата кнопка
-    type: HHTMSource
+    type: HHTMSource?
+  employerId:
+    description: ID работодателя (если есть)
+    type: string?
