Add nullable support from yaml scheme

--- a/Example/schemas/applicant/rate-app/support_chat_click.yaml
+++ b/Example/schemas/applicant/rate-app/support_chat_click.yaml
@@ -20,7 +20,9 @@ internal:
       hhtmSource: Applicant.employerScreen
   hhtmFrom:
     description: После открытия какого экрана была нажата кнопка
-    type: HHTMSource?
+    nullable: true
+    type: HHTMSource
   employerId:
     description: ID работодателя (если есть)
-    type: string?
+    nullable: true
+    type: string
