--- a/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
@@ -74,6 +74,12 @@
             ReferencedContainer = "container:">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "generate"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
