Change skip to run_condition

--- a/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
@@ -81,14 +81,14 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--debug"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "GIT_BRANCH"
-            value = "PORTFOLIO-20161"
-            isEnabled = "YES">
+            value = "develop"
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
