Resolving GitHub reference using Finders (#41)

--- a/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
@@ -79,7 +79,18 @@
             argument = "generate"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--debug"
+            isEnabled = "NO">
+         </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "GIT_BRANCH"
+            value = "develop"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
