Array type support

--- a/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/analyticsgen.xcscheme
@@ -83,6 +83,10 @@
             argument = "--debug"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--config .analyticsGenLocal.yml"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
