добавил пример зпт ивента

--- a/Example/specification/specification.yaml
+++ b/Example/specification/specification.yaml
@@ -9,7 +9,7 @@ definitions:
       # Категория события
       category:
         type: string
-        enum: [anonymous, applicant, anonymous/applicant, employer]
+        enum: [anonymous, applicant, anonymous/applicant, employer, hhmobile_uudid]
       # Action события
       action:
         type: string
