добавил примеры с edition в Example

--- a/Example/schemas/applicant/zarplata/zp_authorization_success.yaml
+++ b/Example/schemas/applicant/zarplata/zp_authorization_success.yaml
@@ -4,6 +4,7 @@ description: Пользователь успешно авторизовался 
 category: Авторизация
 application: applicant
 platform: Android/iOS
+edition: [zp]
 
 external:
   category: hhmobile_uuid
