--- a/Example/specification/specification.yaml
+++ b/Example/specification/specification.yaml
@@ -9,7 +9,7 @@ definitions:
       # Категория события
       category:
         type: string
-        enum: [anonymous, applicant, anonymous/applicant, employer]
+        enum: [anonymous, applicant, anonymous/applicant, employer, hhmobile_uudid]
       # Action события
       action:
         type: string
@@ -68,6 +68,12 @@ definitions:
       application:
         type: string
         enum: [applicant, employer]
+     # Приложение (hh, jtb, zp)
+      edition:
+        type: array
+        items:
+          type: string
+          enum: [hh, jtb, zp]
       # Эксперимент
       experiment:
         type: object
