--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,57 @@
+## OS X files
 .DS_Store
-/.build
-/Packages
-/*.xcodeproj
+.DS_Store?
+.Trashes
+.Spotlight-V100
+*.swp
+
+## Xcode build files
+DerivedData/
+build/
+
+## Xcode private settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 xcuserdata/
-Example/generated
+
+## Other
+*.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Packages Manager
+Packages
+.build
+.swiftpm
+
+# CocoaPods
+Pods/
+
+# Carthage
+Carthage/Build
+
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+
+# AnalyticsGen
+analyticsgen-*.zip
