--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,10 @@ env:
 jobs:
   macOS:
     name: macOS
-    runs-on: macOS-latest
+    runs-on: macOS-15
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_16.0.app
     steps:
-      - uses: actions/checkout@v2
-      - name: Swift
-        uses: swift-actions/setup-swift@v1
-      - name: Preparation
-        run: set -o pipefail
+      - uses: actions/checkout@v3
       - name: Build
         run: make build
